Fix no data text wrap when the data selector is in a narrow container

--- a/src/nova/trame/view/theme/assets/core_style.scss
+++ b/src/nova/trame/view/theme/assets/core_style.scss
@@ -58,6 +58,12 @@ html {
             cursor: pointer;
             margin-right: 0.25em;
         }
+
+        p {
+            line-height: 1;
+            margin-top: 1em;
+            white-space: normal;
+        }
     }
 
     .rgCell label {
